--- a/css/estilos.css
+++ b/css/estilos.css
@@ -30,7 +30,7 @@ header {
 }
 
 
-/*            CONTENIDO          */
+                             /*            ENCABEZADO          */
 
 .contenedor__encabezado {
     display: flex;
@@ -84,8 +84,14 @@ header {
 
 
 
-/*  SERVICIOS HOME */
+                                /*     SERVICIOS HOME      */
 
+.cuadro__servicios{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
 
 .contenedor__servicios h2{
     text-align: center;
@@ -95,12 +101,6 @@ header {
     color: #8a2be2;
 }
 
-.cuadro__servicios{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
 .cuadro__servicios img{
     max-width: 200px;
 }
@@ -116,7 +116,7 @@ header {
 }
 
 
-/*  SLIDER HOME */
+                                /*     SLIDER HOME     */
 
 .contenedor__slider{
     display: flex;
@@ -143,7 +143,7 @@ header {
 }
 
 
-/*  SLIDER HOME */
+                               /*     EQUIPO HOME     */
 
 .contenedor__equipo{
     display: flex;
@@ -162,7 +162,7 @@ header {
 
 
 
-/*  FOOTER  */
+                                /*     FOOTER     */
 
 footer {
     color: white;
@@ -205,7 +205,7 @@ footer {
 }
 
 
-/* DERECHOS*/
+                    /* DERECHOS*/
 
 
 .contenedor__derechos{
@@ -215,7 +215,7 @@ footer {
 }
 
 
-/*  Formulario de contacto  */
+                            /*     CONTACTO (pagina)     */
 
 .contenedor__contacto{
     margin: auto;
@@ -225,6 +225,7 @@ footer {
     position: relative;
     border-radius: 40px 0px 40px 0px;
     padding: 30px;
+    padding-bottom: 80px;
 }
 
 .contenedor__contacto h2{
@@ -249,12 +250,137 @@ footer {
     font-weight: 600;
 }
 
-.boton__submit:active{
-    box-shadow: #bf8fec;
+
+
+                                /*     PORTAFOLIO (pagina)    */
+
+
+.contenedor__portafolio{
+    padding: 0px 50px 50px 50px;
+    display: grid;
+    grid-template-columns: 1fr 2fr 2fr;
+    grid-template-rows: 0,3fr 1fr 0,4fr 1fr 0,4fr 1fr 0,3fr;
+    grid-template-areas: 
+    "titulo titulo titulo"
+    "texto foto1 foto2"
+    ". foto3 foto3"
+    ". foto4 foto5"
+    ". foto6 foto6"
+    ". foto7 foto8"
+    ". texto1 texto1";
+}
+
+.contenedor__portafolio img{
+    padding: 0px;
+}
+
+.contenedor__portafolio img:hover{
+    animation: portafolio 2s ease-in 1;
+}
+
+.titulo{
+    text-align: center;
+    font-size: 50px;
+    font-weight: 600;
+    padding: 50px;
+    color: #8a2be2;
+    grid-area: titulo;
+}
+.texto{
+    font-size: 20px;
+    color: #3b165d;
+    font-weight: 500;
+    grid-area: texto;
+    text-align: right;
+}
+.foto1{
+    grid-area: foto1;
+}
+.foto2{
+    grid-area: foto2;
+}
+.foto3{
+    grid-area: foto3;
+}
+.foto4{
+    grid-area: foto4;
+}
+.foto5{
+    grid-area: foto5;
+}
+.foto6{
+    grid-area: foto6;
+}
+.foto7{
+    grid-area: foto7;
+}
+.foto8{
+    grid-area: foto8;
+}
+.texto1{
+    text-align: end;
+    font-size: 20px;
+    font-weight: 600;
+    padding: 50px;
+    color: #8a2be2;
+    grid-area: texto1;
 }
 
 
-/*  ANIMACIONES  */
+                                 /*     SERVICIOS (pagina)     */
+
+.servicios__recuadro{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding-bottom: 50px;
+}
+.servicios__recuadro p{
+    text-align: center;
+    font-size: 20px;
+    font-weight: 600;
+    margin: 20px;
+    padding: 0px 60px;
+}
+
+.servicios__recuadro h3{
+    color: #611da0;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 800;
+}
+
+.servicios__recuadro img{
+    width: 400px;
+}
+
+.contenedor__desServicios{
+    padding: 50px 100px;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 500;
+}
+
+
+                                 /*     NOSOTROS (pagina)     */
+
+.contenedor__nosotros h2{
+    text-align: center;
+    font-size: 50px;
+    font-weight: 600;
+    padding: 50px;
+    color: #8a2be2;
+}
+
+.contenedor__nosotros p{
+    text-align: center;
+    font-size: 20px;
+    font-weight: 400;
+    padding: 0px 80px;
+}
+
+                                 /*     ANIMACIONES      */
 
 
 @keyframes flotar{
@@ -269,17 +395,26 @@ footer {
     }
 }
 
-/*  MEDIAQUERIES  */
+@keyframes portafolio {
+    0%{
+        transform: scale(1, 1);
+    }
+    100%{
+        transform: scale(1.5, 1.5);
+    }
+}
+
+                                    /*     MEDIAQUERIES     */
 
 @media screen and (max-width: 768px) {
     
-    /* HEADER */
+                  /* HEADER */
     
     .logo {
         width: 185px;
     }
 
-    /* CONTENIDO */
+                   /* CONTENIDO */
     .encabezado{
         text-align: center;
     }
@@ -296,7 +431,7 @@ footer {
         width: 50px;
     }
 
-    /* FOOTER */
+                    /* FOOTER */
 
 
     .widget__footer {
@@ -310,11 +445,48 @@ footer {
         width: 40px;
     }
 
-    /* FORMULARIO */
+                    /* FORMULARIO */
 
     .contenedor__contacto{
         width: 400px;
     }
+
+                   /* PORTAFOLIO (pagina) */
+
+
+    .texto{
+        font-size: 14px;
+        text-align: center;
+    }
+
+    .contenedor__portafolio{
+        grid-template-columns: 2fr 2fr;
+        grid-template-rows: 0,3fr 1fr 0,4fr 1fr 0,4fr 1fr 0,3fr;
+        grid-template-areas: 
+        "titulo titulo"
+        "texto texto"
+        "foto1 foto2"
+        "foto3 foto3"
+        "foto4 foto5"
+        "foto6 foto6"
+        "foto7 foto8"
+        "texto1 texto1";
+    }
+
+    .texto1{
+        text-align: center;
+        font-size: 16px;
+        font-weight: 600;
+    }
+
+                    /* SERVICIOS (pagina) */
+
+    .contenedor__desServicios{
+        padding: 30px 60px;
+        font-size: 20px;
+    }
 }
+
+
 
 
