--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ body {
   padding-top: 150px; }
 
 header {
-  background-color: #d4d0ff7c;
+  background-color: #fcefff;
   width: 100%;
   height: 120px;
   display: flex;
@@ -67,7 +67,8 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column; }
+  flex-direction: column;
+  margin-bottom: 50px; }
   .cuadro__servicios img {
     max-width: 200px; }
     .cuadro__servicios img:hover {
@@ -128,6 +129,8 @@ header {
     font-weight: 600;
     padding: 50px;
     color: #8a2be2; }
+  .contenedor__equipo .card {
+    border: 0px; }
 
 .contenedor__contacto {
   margin: auto;
@@ -181,9 +184,9 @@ header {
   grid-area: titulo; }
 
 .texto {
-  font-size: 20px;
+  font-size: 24px;
   color: #3b165d;
-  font-weight: 500;
+  font-weight: 600;
   grid-area: texto;
   text-align: right; }
 
@@ -213,7 +216,7 @@ header {
 
 .texto1 {
   text-align: end;
-  font-size: 20px;
+  font-size: 24px;
   font-weight: 600;
   padding: 50px;
   color: #8a2be2;
@@ -264,6 +267,9 @@ header {
   font-size: 20px;
   font-weight: 400;
   padding: 0px 80px; }
+
+.contenedor__nosotros .card {
+  border: none; }
 
 /*     FOOTER     */
 footer {
@@ -335,6 +341,8 @@ footer {
       display: none; }
   .cuadro__servicios {
     padding: 20px; }
+  .contenedor__equipo .card {
+    padding-bottom: 40px; }
   .contenedor__slider {
     display: none; }
   .image__carousel {
