--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,5 +1,5 @@
 header {
-    background-color: #d4d0ff7c;
+    background-color: #fcefff;
     width: 100%;
     height: 120px;    
     display: flex;
